# radiant_prism

./: .gitignore  Cargo.toml  Makefile  build.rs  config.yaml.example  glide.yaml  goals.md  needed_features.txt
auth/: auth.go
backend/: backend.go
certmgmt/: certmgmt.go
helpers/: Makefile  flatpak  flatpak.c  netifs  netifs.c  packagekit  packagekit.c
html/: package-lock.json  package.json  webpack.config.js
html/app/: main.js
httpserver/: httpserver.go  httpserver_test.go
migrations/: 1504807970_initial.down.sql  1504807970_initial.up.sql
server/: main.go
src/: main.rs
src/flatpak/: mod.rs
src/sysutils/: mod.rs
templates/: authredirect.tmpl  main.tmpl
utillib-c/: utillib.c  utillib.h
