[package]
name = "radiant_prism"
version = "0.1.0"
authors = ["Alexander Wauck <alex@impulse101.org>"]
build = "build.rs"

[dependencies]
regex = "0.2"
libc = "0.2.0"
# The following commit has been reviewed for security.
pgs-files = { git = "https://github.com/ZeroCostGoods/pgs-files", rev = "abc2d256f1135939aead0b8b9952fed5b3c0409a" }

[build-dependencies]
gcc = "0.3"